--- a/01-UI/css/master.css
+++ b/01-UI/css/master.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&display=swap');
 
+:root {
+    --color-pri: #022b3a;
+    --color-sec: #1f7a8c;
+    --color-trd: #bfdbf7;
+    --color-frd: #e1e5f2;
+    --font-main: Poppins, sans-serif;
+}
+
 body {
-    background-color: #022b3a;
-    font-family: Poppins, sans-serif;
+    background-color: var(--color-pri);
+    font-family: var(--font-main);
     min-height: 100vh;
     margin: 0;
     padding: 0;
@@ -28,9 +36,9 @@ main {
         }
         a:is(:link, :visited) {
             align-items: center;
-            border: 2px solid #1f7a8c;
+            border: 2px solid var(--color-sec);
             border-radius: 50px;
-            background-color: #1f7a8c;
+            background-color: var(--color-sec);
             color: #fff;
             display: flex;
             height: 80px;
@@ -44,12 +52,13 @@ main {
         }
         a:is(:hover) {
             border: 2px solid #fff;
-            background-color: #022b3a;
+            background-color: var(--color-pri);
             color: #fff;
         }
     }
 
-    section.login {
+    section.login,
+    section.register {
         menu {
             padding: 0;
             display: flex;
@@ -63,34 +72,53 @@ main {
                 width: 190px;
             }
             a:first-child {
-                background-color: #1f7a8c;
+                background-color: var(--color-sec);
                 border-radius: 50px 0 0 50px ;
                 color: #fff;
             }
             a:last-child {
                 background-color: #fff;
                 border-radius: 0 50px 50px 0;
-                color: #1f7a8c;
+                color: var(--color-sec);
             }
         }
 
         form {
             display: flex;
             flex-direction: column;
-            gap: 0.6rem;
+            gap: 2.2rem;
             margin-top: 40px;
 
             input, button {
+                outline: none;
                 border: none;
                 border-radius: 50px;
                 padding: 20px;
                 width: 380px;
             }
+
+            input {
+                background-color: #fffb;
+                color: var(--color-pri);
+                font-size: 24px;
+                font-weight: 400;
+                padding: 25px 20px;
+                transition: all 0.5s ease-in;
+                width: 340px;
+                &::placeholder {
+                    color: var(--color-pri);
+                    text-transform: uppercase;
+                }
+                &:focus {
+                    background-color: #fff;
+                }
+            }
+
             button {
                 align-items: center;
-                border: 2px solid #1f7a8c;
+                border: 2px solid var(--color-sec);
                 border-radius: 50px;
-                background-color: #1f7a8c;
+                background-color: var(--color-sec);
                 color: #fff;
                 display: flex;
                 height: 80px;
@@ -104,9 +132,135 @@ main {
             }
             button:is(:hover) {
                 border: 2px solid #fff;
-                background-color: #022b3a;
+                background-color: var(--color-pri);
                 cursor: pointer;
                 color: #fff;
+            }
+        }
+    }
+
+    section.register {
+        menu {
+            a:first-child {
+                background-color: #fff;
+                border-radius: 50px 0 0 50px ;
+                color: var(--color-sec);
+            }
+            a:last-child {
+                background-color: var(--color-sec);
+                border-radius: 0 50px 50px 0;
+                color: #fff;
+            }
+        }
+    }
+
+
+    header.nav {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 400px;
+    }
+
+    header.nav.level-0 {
+        a:first-of-type {
+            visibility: hidden;
+            pointer-events: none;
+        }
+    }
+
+    section.dashboard {
+        h1 {
+            font-size: 28px;
+            color: #fff;
+            text-align: center;
+            text-transform: uppercase;
+            margin: 2.4rem 0;
+        }
+        menu {
+            padding: 0;
+            ul {
+                display: flex;
+                flex-direction: column;
+                gap: 1rem;
+                list-style: none;
+                li {
+                    background-color: var(--color-sec);
+                    border-radius: 20px;
+                    padding: 20px;
+                    width: 360px;
+                    a:is(:link, :visited) {
+                        display: flex;
+                        align-items: center;
+                        font-size: 24px;
+                        gap: 1rem;
+                        color: #fff;
+                        text-decoration: none;
+                    }
+                    a {
+                        img {
+                            transform: scale(.8);
+                        }
+                        img, span {
+                            transition: all 0.4s ease-in;
+                        }
+                    }
+                    &:hover {
+                        a {
+                            img {
+                                transform: scale(1);
+                            }
+                            span {
+                                transform: translateX(6px);
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+    section.module {
+        h1 {
+            font-size: 28px;
+            color: #fff;
+            text-align: center;
+            text-transform: uppercase;
+            margin: 2.4rem 0;
+        }
+
+        table {
+            color: var(--color-pri);
+            border-collapse: collapse;
+            width: 400px;
+            tbody {
+                display: flex;
+                flex-direction: column;
+                gap: 0.6rem;
+                tr {
+                    border-radius: 20px;
+                    background-color: var(--color-trd);
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    &:nth-last-child(even) {
+                        background-color: var(--color-frd);
+                    }
+                    td {
+                        padding: 16px;
+                        a:is(:link, :visited) {
+                            text-decoration: none;
+                            img {
+                                transform: scale(0.9);
+                                transition: all 0.2s ease-in;
+                            }
+                        }
+                        a:is(:hover) img {
+                            transform: scale(1);
+
+                        }
+                    }
+                }
             }
         }
     }
