--- a/01-UI/css/master.css
+++ b/01-UI/css/master.css
@@ -95,6 +95,7 @@ main {
             align-items: center;
             gap: 2.2rem;
             margin-top: 40px;
+            margin-bottom: 1rem;
 
             input, button {
                 outline: none;
@@ -268,6 +269,7 @@ main {
         table {
             color: var(--color-pri);
             border-collapse: collapse;
+            margin-bottom: 1rem;
             width: 400px;
             tbody {
                 display: flex;
@@ -325,6 +327,7 @@ main {
         }
 
         form {
+            margin-bottom: 1rem;
             img#upload {
                 border-radius: 200px;
                 border: 2px solid #fff;
@@ -359,7 +362,7 @@ main {
             grid-template-columns: repeat(2, 1fr);
             column-gap: 1rem;
             row-gap: 1rem;
-            margin-top: 1rem;
+            margin: 1rem 0;
 
             p {
                 border-radius: 50px;
@@ -378,6 +381,7 @@ main {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
+        margin-bottom: 1rem;
 
         article {
             border-radius: 20px;
