feat: new files to pdo example crud

--- a/01-UI/css/master.css
+++ b/01-UI/css/master.css
@@ -426,7 +426,7 @@ main {
                 }
             }
         }
-        article:nth-child(odd) {
+        article.bgcolor {
             background-color: var(--color-frd);
         }
 
