Create method is completed

--- a/01-UI/css/master.css
+++ b/01-UI/css/master.css
@@ -298,6 +298,15 @@ main {
                             transform: scale(1);
 
                         }
+
+                    }
+                    td:nth-child(1) {
+                        img {
+                            border-radius: 100px;
+                            height: 60px;
+                            border: 2px solid var(--color-pri);
+                            width: 60px;
+                        }
                     }
                     td:nth-child(2) {
                         display: flex;
