Role Admin done

--- a/04-laravel/larapp/public/css/master.css
+++ b/04-laravel/larapp/public/css/master.css
@@ -353,6 +353,25 @@ main {
                     }
                 }
             }
+            tbody.adoptions {
+                tr {
+                    justify-content: start;
+                    gap: 4rem;
+                    td:nth-child(2) {
+                        width: 220px;
+                        span:last-child {
+                            font-style: oblique;
+                        }
+                    }
+                    td:first-of-type {
+                        position: relative;
+                        img:last-child {
+                            position: absolute;
+                            left: 50px;
+                        }
+                    }
+                }
+            }
         }
     }
 
